--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
 * {
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
